# RGBD-Object-Tracking

./: CMakeLists.txt  README.md  mainpage.dox  manifest.xml
cfg/: raw_safe_object_transportation.vcg
common/include/: bounding_box_tracking.h  object_candidate_extraction.h  object_candidate_tracking.h  platform_extraction.h
common/src/: bounding_box_tracking.cpp  object_candidate_extraction.cpp  object_candidate_tracking.cpp  platform_extraction.cpp
ros/launch/: kinect_offline.launch  pmd_offline.launch
ros/nodes/: object_tracking.cpp
tools/: analysis.py
